--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,3 +32,6 @@ jobs:
         run: |
           forge test -vvv
         id: test
+        env:
+          MOONBASE_RPC_URL: ${{ secrets.MOONBASE_RPC_URL }}
+          GOERLI_RPC_URL: ${{ secrets.GOERLI_RPC_URL }}
