--- a/foundry.toml
+++ b/foundry.toml
@@ -3,4 +3,7 @@ src = 'src'
 out = 'out'
 libs = ['lib']
 
+[etherscan]
+goerli = { key = "${ETHERSCAN_API_KEY}" }
+
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
