--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       fail-fast: true
 
-    name: Foundry tests
+    name: Test CI
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
