--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,7 @@
 src = 'src'
 out = 'out'
 libs = ['lib']
+fs_permissions = [{ access = "read", path = "./"}]
 
 [etherscan]
 goerli = { key = "${ETHERSCAN_API_KEY}" }
