--- a/foundry.toml
+++ b/foundry.toml
@@ -3,6 +3,7 @@ src = 'src'
 out = 'out'
 libs = ['lib']
 fs_permissions = [{ access = "read", path = "./"}]
+optimize_runs = 300
 
 [rpc_endpoints]
 goerli = "${GOERLI_RPC_URL}"
